# solocoder-6058-pydantic-resolve

./: .gitignore  Makefile  NEXT_PROMPT_R1.txt  PROMPT.txt  README.md  README.zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yml  publish.yml
benchmarks/: bench_compare.py  report.py
demo/use_case/: app.py  app_compose.py  app_with_context.py  database.py  (+5 more)
docs/: api_erd.md  api_erd.zh.md  api_resolver.md  api_subset.md  api_subset.zh.md  api_use_case_mcp.md  api_use_case_mcp.zh.md  architecture_entity_first.md  architecture_entity_first.zh.md  benchmark.md  changelog.md  core_api.md  core_api.zh.md  cross_layer_data_flow.md  cross_layer_data_flow.zh.md  erd_and_autoload.md  erd_and_autoload.zh.md  erd_define_subset.md  erd_define_subset.zh.md  fastapi_integration.md  fastapi_integration.zh.md  graphql_guide.md  graphql_guide.zh.md  index.md  index.zh.md  mcp_service.md  mcp_service.zh.md  migration.md  orm_integration.md  orm_integration.zh.md  post_processing.md  post_processing.zh.md  quick_start.md  quick_start.zh.md  use_case_mcp_service.md  use_case_mcp_service.zh.md  voyager_guide.md
overrides/: home.html
pydantic_resolve/: __init__.py  analysis.py  loader_manager.py  resolver.py
skill/: SKILL.md
skill/template/: pyproject.toml
skill/template/src/: database.py  db.py  entities.py  main.py  models.py
skill/template/src/router/: api.py
skill/template/src/service/sprint/: dtos.py  methods.py  service.py  spec.md
skill/template/src/service/task/: dtos.py  methods.py  service.py  spec.md
skill/template/src/service/user/: methods.py
(+60 files in other folders)
