[project]
name = "pydantic-resolve-template"
version = "0.1.0"
description = "pydantic-resolve 三阶段开发模板"
requires-python = ">=3.12"
dependencies = [
    "pydantic-resolve>=2.0.0",
    "fastapi",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "fastapi-voyager",
    "fastmcp>=3.2.4",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
